# Arkptz

./: .gitignore  LICENSE  README.md  data.json  robots.txt
.github/workflows/: generate-resumes.yml  pages.yml  update-game.yml
output/: linkedin_texts.md
output/portfolio/: data.js  index.html  sitemap.xml
resume-generator/: README.md  flake.nix  pyproject.toml
resume-generator/output/: linkedin_texts.md
resume-generator/resume_generator/: generate_all.py  generate_backend.py  generate_backend_crypto.py  generate_backend_traditional.py  generate_cto.py  generate_linkedin.py  generate_ml.py  generate_portfolio.py  generate_readme.py  generate_techlead.py  generate_techlead_crypto.py  generate_techlead_traditional.py  shared.py
resume-generator/src/: generate_all.py  generate_backend.py  generate_ml.py  generate_portfolio.py  generate_quant.py  generate_readme.py  generate_techlead.py  shared.py
resume-generator/templates/: portfolio.html.j2
